# pkg-config

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
subprojects/: glib.wrap
